--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "outDir": "./dist",
         "rootDir": "./src",
 
-        "module": "esnext",
+        "module": "CommonJS",
         "target": "esnext",
 
         "noEmitOnError": true,
