--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "type": "commonjs",
   "scripts": {
-    "compile": "npx tsc",
+    "compile": "rmdir /s /q dist & npx tsc",
     "dev": "npx tsc -watch"
   },
   "keywords": [
