--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,7 @@
         "target": "esnext",
 
         "noEmitOnError": true,
-        "strict": true,
-        "strictNullChecks": true,
-        "strictFunctionTypes": true,
-        "noImplicitAny": true
+        "strict": true
     },
     "include": [
         "src/**/*.ts"
